Print a console warning when HTMLCanvasElement exceeds the maximum size https://bugs.webkit.org/show_bug.cgi?id=141861 <rdar://problem/19729145>

Reviewed by Simon Fraser.

Source/WebCore:

Add a warning if we ever try to create a canvas that is
too big.

No test because:
1. We can't ref-test against console messages.
2. The output is platform specific.

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::createImageBuffer):

LayoutTests:

Add error message to expected results.

* fast/canvas/canvas-toDataURL-crash-expected.txt:
* fast/canvas/pattern-too-large-to-create-expected.txt:

Canonical link: https://commits.webkit.org/159918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180492 268f45cc-cd09-0410-ab3c-d52691b4dbfc